--- a/index.html
+++ b/index.html
@@ -1,51 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="main.css">
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Document</title>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+            integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
+            crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link rel="stylesheet" href="main.css">
+    </head>
 
-<body>
-    <!-- nav -->
-    <nav class="navbar">
-        <div class="navbar-center">
-            <span class="nav-icon">
-                <i class="fas fa-bars"></i>
-            </span>
-            <img src="./images/logo.svg" alt="store logo">
-            <div class="cart-btn">
+    <body>
+        <!-- nav -->
+        <nav class="navbar">
+            <div class="navbar-center">
                 <span class="nav-icon">
-                    <i class="fas fa-cart-plus"></i>
+                    <i class="fas fa-bars"></i>
                 </span>
-                <div class="cart-items">0</div>
+                <img src="./images/logo.svg" alt="store logo">
+                <div class="cart-btn">
+                    <span class="nav-icon">
+                        <i class="fas fa-cart-plus"></i>
+                    </span>
+                    <div class="cart-items">0</div>
+                </div>
+            </div>
+        </nav>
+        <!-- nav of end -->
+        <!-- hero -->
+        <header class="hero">
+            <div class="bannner">
+                <h1 class="banner-title">furniture collection</h1>
+                <button class="banner-btn">shop now</button>
+            </div>
+        </header>
+        <!-- hero of end -->
+        <!-- products -->
+        <section class="products">
+            <div class="section-title">
+                <h2>our products</h2>
+                <div class="products-center">
+
+                </div>
+            </div>
+        </section>
+        <!-- end of products -->
+        <!-- cart -->
+        <div class="cart-overlay">
+            <div class="cart">
+                <span class="close-cart">
+                    <i class="fas fa-window-close"></i>
+                </span>
+                <h2>your cart</h2>
+                <div class="cart-content">
+                    <!-- cart-teim -->
+                    <div class="cart-item">
+                        
+                    </div>
+                </div>
+                <div class="cart-footer">
+                    <h3>your total:$ <span class="cart-total">0</span></h3>
+                    <button class="clear-cart banner-btn">clear cart</button>
+                </div>
             </div>
         </div>
-    </nav>
-<!-- nav of end -->
-<!-- hero -->
-<header class="hero">
-    <div class="bannner">
-        <h1 class="banner-title">furniture collection</h1>
-        <button class="banner-btn">shop now</button>
-    </div>
-</header>
-<!-- hero of end -->
-<!-- products -->
-<section class="products">
-    <div class="section-title">
-        <h2>our products</h2>
-        <div class="products-center">
-
-        </div>
-    </div>
-</section>
-<!-- end of products -->
-    <script src="app.js"></script>
-</body>
+        <!-- end of cart -->
+        <script src="app.js"></script>
+    </body>
 
 </html>
